--- a/src/app/stat/visualization/visualization.component.html
+++ b/src/app/stat/visualization/visualization.component.html
@@ -1,11 +1,11 @@
-
 <div>
   <div class="nav sp-switch">
-    <div class="option">
+    <div class="option" [routerLink]="['synthesis']" routerLinkActive="active">
       Synthèse
     </div>
-    <div class="option">
+    <div class="option" [routerLink]="['graph']" routerLinkActive="active">
       Graphiques
     </div>
   </div>
+  <router-outlet></router-outlet>
 </div>
